--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "rimraf": "5.0.1",
     "storybook": "7.4.2",
+    "storybook-dark-mode": "3.0.1",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
