--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,12 +35,14 @@
     "dotenv": "16.3.1",
     "fast-glob": "3.3.1",
     "node-fetch": "2.7.0",
+    "semver": "^7.5.4",
     "tar": "6.2.0"
   },
   "devDependencies": {
     "@medplum/fhirtypes": "*",
     "@medplum/mock": "*",
     "@types/node-fetch": "2.6.5",
+    "@types/semver": "^7.5.3",
     "@types/tar": "6.1.6"
   },
   "bin": {
